// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radios items when they include attributes renders boolean attributes 1`] = `
<div class="govuk-form-group">
  <div class="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input"
             id="example-name"
             name="example-name"
             type="radio"
             value="yes"
             data-attribute
      >
      <label class="govuk-label govuk-radios__label"
             for="example-name"
      >
        Yes
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input"
             id="example-name-2"
             name="example-name"
             type="radio"
             value="no"
             checked
             data-attribute
      >
      <label class="govuk-label govuk-radios__label"
             for="example-name-2"
      >
        No
      </label>
    </div>
  </div>
</div>
`;

exports[`Radios nested dependant components passes through fieldset params without breaking 1`] = `
<fieldset class="govuk-fieldset app-fieldset--custom-modifier"
          aria-describedby="example-hint example-error"
          data-attribute="value"
          data-second-attribute="second-value"
>
  <legend class="govuk-fieldset__legend">
    Have you changed your name?
  </legend>
</fieldset>
`;

exports[`Radios nested dependant components passes through html fieldset params without breaking 1`] = `
<fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend">
    Have
    <b>
      you
    </b>
    changed your name?
  </legend>
</fieldset>
`;

exports[`Radios nested dependant components passes through label params without breaking 1`] = `
<label class="govuk-label govuk-radios__label"
       data-attribute="value"
       data-second-attribute="second-value"
       for="example-name"
>
  <b>
    Yes
  </b>
</label>
<label class="govuk-label govuk-radios__label"
       for="example-name-2"
>
  &lt;b&gt;No&lt;/b&gt;
</label>
`;

exports[`Radios renders boolean attributes 1`] = `
<div class="govuk-form-group">
  <div class="govuk-radios"
       data-attribute
  >
    <div class="govuk-radios__item">
      <input class="govuk-radios__input"
             id="example-name"
             name="example-name"
             type="radio"
             value="yes"
      >
      <label class="govuk-label govuk-radios__label"
             for="example-name"
      >
        Yes
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input"
             id="example-name-2"
             name="example-name"
             type="radio"
             value="no"
      >
      <label class="govuk-label govuk-radios__label"
             for="example-name-2"
      >
        No
      </label>
    </div>
  </div>
</div>
`;

exports[`Radios when they include a hint renders the hint 1`] = `
<span id="example-hint"
      class="govuk-hint"
>
  This includes changing your last name or spelling your name differently.
</span>
`;

exports[`Radios when they include an error message renders the error message 1`] = `
<span id="example-error"
      class="govuk-error-message"
>
  Please select an option
</span>
`;
